--- a/doc/references.bib
+++ b/doc/references.bib
@@ -381,3 +381,129 @@
 	YEAR = {2023},
 	JOURNAL = {ABC News}
 }
+
+@ARTICLE{cnntanks,
+	AUTHOR = {Kevin Liptak and Stephanie Halasz and Sophie Tanno and Sugam Pokharel},
+	TITLE = {Germany and US announce plans to send tanks to Ukraine in major sign of support for Kyiv},
+	YEAR = {2023},
+	JOURNAL = {CNN}
+}
+
+@ARTICLE{nyttanks,
+	AUTHOR = {Erika Solomon and Peter Baker and Eric Nagourney},
+	TITLE = {Germany and U.S., Dropping Resistance, Will Send Battle Tanks to Ukraine},
+	YEAR = {2023},
+	JOURNAL = {The New York Times}
+}
+
+@ARTICLE{wptanks,
+	AUTHOR = {Karen DeYoung and Loveday Morris and Emily Rauhala and Dan Lamothe},
+	TITLE = {U.S. will supply M1 tanks to Ukraine; Germany approves Leopards},
+	YEAR = {2023},
+	JOURNAL = {The Washington Post}
+}
+
+@ARTICLE{foxtanks,
+	AUTHOR = {Caitlin McFall},
+	TITLE = {Ukraine-Russia war: Germany agrees to send 2 battalions of Leopard 2 tanks after heavy pressure},
+	YEAR = {2023},
+	JOURNAL = {Fox News}
+}
+
+@ARTICLE{nyptanks,
+	AUTHOR = {Dalibor Rohac},
+	TITLE = {Fuss over Ukraine tanks shows the world has no substitute for America’s defense industry},
+	YEAR = {2023},
+	JOURNAL = {New York Post}
+}
+
+@ARTICLE{nbctanks,
+	AUTHOR = {Patrick Smith},
+	TITLE = {Ukraine to get Leopard tanks from Germany, ending a rift among Western allies},
+	YEAR = {2023},
+	JOURNAL = {NBC News}
+}
+
+@ARTICLE{wsjtanks,
+	AUTHOR = {Michael R. Gordon and Gordon Lubold and Bojan Pancevski},
+	TITLE = {U.S., Germany Approve Sending Tanks to Ukraine},
+	YEAR = {2023},
+	JOURNAL = {The Wall Street Journal}
+}
+
+@ARTICLE{bbctanks,
+	AUTHOR = {Gareth Evans},
+	TITLE = {US joins Germany in sending battle tanks to Ukraine},
+	YEAR = {2023},
+	JOURNAL = {BBC}
+}
+
+@ARTICLE{abctanks,
+	AUTHOR = {Ben Gittleson and Justin Gomez and Sarah Kolinovsky and Molly Nagle and Isabella Murray},
+	TITLE = {Biden approves sending 31 Abrams tanks to Ukraine},
+	YEAR = {2023},
+	JOURNAL = {ABC News}
+}
+
+@ARTICLE{cnnsantos,
+	AUTHOR = {Clare Foran and Haley Talbot},
+	TITLE = {House votes to expel Santos from Congress in historic vote},
+	YEAR = {2023},
+	JOURNAL = {CNN}
+}
+
+@ARTICLE{nytsantos,
+	AUTHOR = {Michael Gold and Grace Ashford},
+	TITLE = {George Santos Is Kicked Out of Congress in a Historic Vote},
+	YEAR = {2023},
+	JOURNAL = {The New York Times}
+}
+
+@ARTICLE{wpsantos,
+	AUTHOR = {Amy B. Wang and Mariana Alfaro},
+	TITLE = {Rep. George Santos expelled from Congress on bipartisan vote},
+	YEAR = {2023},
+	JOURNAL = {The Washington Post}
+}
+
+@ARTICLE{foxsantos,
+	AUTHOR = {Elizabeth Elkind},
+	TITLE = {Embattled GOP Rep George Santos expelled from House},
+	YEAR = {2023},
+	JOURNAL = {Fox News}
+}
+
+@ARTICLE{nypsantos,
+	AUTHOR = {Josh Christenson},
+	TITLE = {Lying NY Rep. George Santos becomes 6th member expelled from House ever},
+	YEAR = {2023},
+	JOURNAL = {New York Post}
+}
+
+@ARTICLE{nbcsantos,
+	AUTHOR = {Scott Wong and Dareh Gregorian and Kate Santaliz and Kyle Stewart},
+	TITLE = {House votes to expel indicted Rep. George Santos from Congress},
+	YEAR = {2023},
+	JOURNAL = {NBC News}
+}
+
+@ARTICLE{wsjsantos,
+	AUTHOR = {Katy Stech Ferek and Jimmy Vielkind},
+	TITLE = {George Santos Expelled From Congress in Historic House Vote},
+	YEAR = {2023},
+	JOURNAL = {The Wall Street Journal}
+}
+
+@ARTICLE{bbcsantos,
+	AUTHOR = {Madeline Halpert and Sam Cabral},
+	TITLE = {George Santos expelled from Congress in historic vote},
+	YEAR = {2023},
+	JOURNAL = {BBC}
+}
+
+@ARTICLE{abcsantos,
+	AUTHOR = {Lauren Peller and Alexandra Hutzler},
+	TITLE = {Republican George Santos becomes first House member expelled in more than 20 years},
+	YEAR = {2023},
+	JOURNAL = {ABC News}
+}
